; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-results-data.c_get_hosts_list_by_status_and_result.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-results-data.c_get_hosts_list_by_status_and_result.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [99 x i8] c"get_hosts_list_by_status_and_result (volume_id:%llu, transaction_id: %d, status: %s, result:0x%x)\0A\00", align 1
@.str.1 = private unnamed_addr constant [58 x i8] c"get_hosts_list_by_status_and_result: unknown status \22%s\22\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_hosts_list_by_status_and_result(i64 %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i64 %0, i64* %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i64, i64* %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = call i32 (i32, i8*, ...) @vkprintf(i32 3, i8* getelementptr inbounds ([99 x i8], [99 x i8]* @.str, i64 0, i64 0), i64 %11, i32 %12, i8* %13, i32 %14)
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @alpha_to_status(i8* %16)
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* %10, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %4
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 (i32, i8*, ...) @vkprintf(i32 3, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.1, i64 0, i64 0), i8* %21)
  store i8* null, i8** %5, align 8
  br label %31

23:                                               ; preds = %4
  %24 = load i64, i64* %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %10, align 4
  %27 = shl i32 %26, 28
  %28 = load i32, i32* %9, align 4
  %29 = or i32 %27, %28
  %30 = call i8* @get_hosts_list(i64 %24, i32 %25, i32 %29, i32 -1)
  store i8* %30, i8** %5, align 8
  br label %31

31:                                               ; preds = %23, %20
  %32 = load i8*, i8** %5, align 8
  ret i8* %32
}

declare dso_local i32 @vkprintf(i32, i8*, ...) #1

declare dso_local i32 @alpha_to_status(i8*) #1

declare dso_local i8* @get_hosts_list(i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
